package com.masanz.imperia.modelo;

/**
 * Para explicar qué es un record y cómo devolver dos valores
 */
public record DosValores(int uno, int dos){}
